--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -61,7 +61,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-70%, -100%);
+    transform: translate(-50%, -100%);
     z-index: 10;
     padding: 2em 2em;
 
@@ -104,51 +104,51 @@
 //! SLIDER
 
 .slider {
+  margin: 3em auto 2em;
   position: relative;
-  display: inline-block;
-  // @include limit;
 
   button {
-    border: none;
-    background-color: #fff;
-    width: 2em;
-
+    background-color: transparent;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     border: none;
-    background-color: rgba(255, 255, 255, 0.5);
     width: 2em;
     height: 2em;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     z-index: 2;
-
+    background-color: $color-secondary;
+    border-radius: 1em;
+    padding: 0.5em;
+    
+    img {
+      width: 100%;
+    }
+    
     .left{
       left: 0;
     }
-
+    
     .right{
       right: 0;
     }
+  }
+  
 
-    }
+  
+  &__screen {
+    width: 12.5em !important;
+    display: block;
+    position: relative;
+    z-index: 1;
     
     img {
       width: 100%;
     }
   }
-
-  .screen {
-    width: 20em;
-    position: relative;
-    z-index: 1;
-
-    img {
-      // width: 100%;
-    }
-  }
+}
 
 
 @media (min-width: 1000px) {
@@ -169,5 +169,18 @@
         flex-direction: column;
       }
     }
+  }
+}
+
+//! SLIDER
+
+.slider {
+  @include limit;
+  margin: 3em 0 0;
+  align-content: center;
+  flex-direction: column;
+    
+  &__screen {
+    width: 60% !important;
   }
 }
