--- a/styles/index.css
+++ b/styles/index.css
@@ -255,7 +255,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-70%, -100%);
+  transform: translate(-50%, -100%);
   z-index: 10;
   padding: 2em 2em;
 }
@@ -294,24 +294,27 @@
 }
 
 .slider {
+  margin: 3em auto 2em;
   position: relative;
-  display: inline-block;
 }
 .slider button {
-  border: none;
-  background-color: #fff;
-  width: 2em;
+  background-color: transparent;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   border: none;
-  background-color: rgba(255, 255, 255, 0.5);
   width: 2em;
   height: 2em;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   z-index: 2;
+  background-color: #a5a5a5;
+  border-radius: 1em;
+  padding: 0.5em;
+}
+.slider button img {
+  width: 100%;
 }
 .slider button .left {
   left: 0;
@@ -319,15 +322,16 @@
 .slider button .right {
   right: 0;
 }
-.slider img {
-  width: 100%;
-}
-
-.screen {
-  width: 20em;
+.slider__screen {
+  width: 12.5em !important;
+  display: block;
   position: relative;
   z-index: 1;
 }
+.slider__screen img {
+  width: 100%;
+}
+
 @media (min-width: 1000px) {
   .container_icon {
     bottom: 2.4em;
@@ -338,6 +342,22 @@
     flex-direction: column;
   }
 }
+.slider {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 101.625em;
+  min-width: 62.5em;
+  box-sizing: border-box;
+  margin: 3em 0 0;
+  align-content: center;
+  flex-direction: column;
+}
+.slider__screen {
+  width: 60% !important;
+}
+
 .section4 {
   width: 100%;
   display: inline-block;
@@ -595,7 +615,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-70%, -100%);
+  transform: translate(-50%, -100%);
   z-index: 10;
   padding: 2em 2em;
 }
@@ -634,24 +654,27 @@
 }
 
 .slider {
+  margin: 3em auto 2em;
   position: relative;
-  display: inline-block;
 }
 .slider button {
-  border: none;
-  background-color: #fff;
-  width: 2em;
+  background-color: transparent;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   border: none;
-  background-color: rgba(255, 255, 255, 0.5);
   width: 2em;
   height: 2em;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   z-index: 2;
+  background-color: #a5a5a5;
+  border-radius: 1em;
+  padding: 0.5em;
+}
+.slider button img {
+  width: 100%;
 }
 .slider button .left {
   left: 0;
@@ -659,15 +682,16 @@
 .slider button .right {
   right: 0;
 }
-.slider img {
-  width: 100%;
-}
-
-.screen {
-  width: 20em;
+.slider__screen {
+  width: 12.5em !important;
+  display: block;
   position: relative;
   z-index: 1;
 }
+.slider__screen img {
+  width: 100%;
+}
+
 @media (min-width: 1000px) {
   .container_icon {
     bottom: 2.4em;
@@ -678,6 +702,22 @@
     flex-direction: column;
   }
 }
+.slider {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 101.625em;
+  min-width: 62.5em;
+  box-sizing: border-box;
+  margin: 3em 0 0;
+  align-content: center;
+  flex-direction: column;
+}
+.slider__screen {
+  width: 60% !important;
+}
+
 nav {
   position: fixed;
   width: 100%;
