--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -89,6 +89,31 @@
       border-bottom: 0.125em solid #95989a;
       outline: none;
       margin: 2em auto;
+
+    }
+    
+    .invalid {
+      border-bottom: 0.0625em solid red;
+    }
+
+    input:focus.invalid {
+      outline: none;
+    }
+    
+    .error {
+      display: none;
+      width: 14em;
+      margin: 0 auto;
+      font-size: 0.9em;
+      color: white;
+      background-color: tomato;
+      margin-bottom: 0.5em;
+      border-radius: 0.3125em 0.3125em;
+      box-sizing: border-box;
+    }
+
+    .active {
+      display: block;
     }
 
     .send {
@@ -107,7 +132,7 @@
   display: block;
   position: relative;
   width: 20em;
-  
+
   button {
     position: absolute;
     top: 50%;
@@ -120,38 +145,38 @@
     background-color: $color-secondary;
     border-radius: 1em;
     padding: 0.5em;
-    
+
     img {
       width: 100%;
     }
   }
-  
-  .left{
+
+  .left {
     left: 0;
   }
-  
-  .right{
+
+  .right {
     right: 0;
   }
-  
+
   &__screen {
     width: 100%;
     display: block;
     position: relative;
     z-index: 1;
-    
+
     img {
       width: 100%;
       aspect-ratio: 16 / 9;
     }
   }
 
-  &__indicatorsContainer{
+  &__indicatorsContainer {
     display: block;
     width: 100%;
     text-align: center;
-    
-    &__indicator{
+
+    &__indicator {
       background-color: $color-secondary;
       display: inline-block;
       border-radius: 50%;
@@ -160,7 +185,7 @@
       cursor: pointer;
 
       &.active {
-        background-color: $color-primary;  
+        background-color: $color-primary;
       }
     }
   }
@@ -172,7 +197,7 @@
     bottom: 2.4em;
     right: 4em;
   }
-  
+
   //! MODAL
   .back {
     &__modal {
@@ -182,7 +207,7 @@
       }
     }
   }
-  
+
   //! SLIDER
   .slider {
     @include limit;
