--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -14,6 +14,7 @@ nav {
     display: inline;
     position: relative;
     margin-right: 3em;
+    padding-right: 0.5em;
   }
 
   button {
@@ -87,7 +88,7 @@ nav {
       justify-content: space-between;
 
       .logoNav {
-        margin-left: 4.3em;
+        margin-left: 4em;
       }
 
       .burger,
@@ -101,7 +102,7 @@ nav {
         flex-direction: row;
         list-style: none;
         margin: 0;
-        padding: 0 5em 0 0;
+        padding: 0 6.75em 0 0;
       }
 
       li {
@@ -110,8 +111,8 @@ nav {
         font-size: 0.75rem;
         font-weight: 600;
         letter-spacing: 0.205em;
-        padding: 0 0.88em;
-        margin: 0em 0em 0em 9em;
+        padding: 0 0em;
+        margin: 0em 0em 0em 8.5em;
       }
 
       li:hover {
