--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,8 @@
 @import "./variables.scss";
-@import "./components/components.scss";
+@import "./components/popUp.scss";
+@import "./components/scrollBar.scss";
+@import "./components/buttonToUp.scss";
+@import "./components/slider.scss";
 @import "./mixin";
 @import "./nav.scss";
 @import "./header.scss";
